# solvent

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
dbschema/: schema.sql
docs/: backend_test.py
solventgpt/: app.py  auth.py  config.py  database.py  landingpage.py  prompts.py  protoui.py  utils.py  voicechatbot.py  voiceutils.py
solventgpt/models/: __init__.py  basemodel.py  groq.py  openai.py  perplexity.py
solventgpt/tools/: duckduckgo_search.py  financialjuice.py  stock_chart.py  yahoo_finance_news.py  yahoo_stock_info.py  yf_stock_tools.py  yf_util.py
solventgpt/tools/ddg_search/: __init__.py  tool.py
solventgpt/tools/perplexity/: __init__.py  tool.py
web-app/: README.md  index.html  package-lock.json  package.json
web-app/src/: App.jsx  app.css  main.jsx
web-app/src/api/: api.instance.js  endpoints.constants.js
web-app/src/components/: Chat.jsx  ChatHistory.jsx  ChatInput.jsx  HighchartsDemo.component.jsx  LoadingScreen.jsx  LoginModal.jsx  NewChat.jsx  RegisterModal.jsx  Sidebar copy.jsx  Sidebar.jsx  Topbar.jsx
web-app/src/utils/: colors.js
